fix: Fix image block caption spacing (#254)

--- a/ietf/static_src/css/streamfield.scss
+++ b/ietf/static_src/css/streamfield.scss
@@ -19,6 +19,9 @@
 }
 
 .caption {
+    // Undo space under images. Caption should sit close.
+    margin-top: -1.3em;
+
     margin-bottom: 1.5em;
     font-size: 14px;
     color: #666666;
